# ESP8266

./: .gitignore  CMakeLists.txt  LaunchCmdLine.lnk  LaunchEnvironment.bat  LaunchMSVSCode.bat  LaunchVSCode.lnk  MakeToCmake.bat  Makefile  PrepareEnvironment.bat  README.md  sdkconfig
docs/: chrome-devtools.md
main/: CMakeLists.txt  component.mk  main.c  types.h
main/block_queue/: block_queue.c
main/block_queue/include/: block_queue.h
main/east/: east_packet.c  east_task.c  east_uart.c
main/east/include/: east_task.h  east_uart.h
main/http/daemon/: httpd.c
main/http/server/: http_server.c
main/http/server/fsdata/: fsdata.c  makefsdata.py
main/http/server/fsdata/fs/: config.html  error.html  index.html
main/http/server/fsdata/fs/css/: siimple.min.ice.css
main/http/server/include/: http_server.h
main/http_server/: http_server.c
main/http_server/fsdata/: fsdata.c  makefsdata.py
main/http_server/fsdata/fs/: complete.html  config.html  index.html
main/http_server/fsdata/fs/css/: fonts.css
main/httpd/: fsdata.h  httpd.c  httpd.h
main/led_strip/: led_strip.c  led_task.c
main/led_strip/include/: led_strip.h  led_task.h
main/time/: time_task.c
main/time/include/: time_task.h
main/udp/: udp_dns_server.c  udp_task.c
main/udp/include/: udp_dns_server.h  udp_task.h
main/wifi/: wifi_task.c
main/wifi/include/: wifi_task.h
utils/: install-esp-idf.bat  launch-vs-code.bat
utils/ws_server/: main.js
